<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:text="@string/do_you_end_the_game"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/end"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/continuer"
                android:layout_marginHorizontal="20dp"
                android:textSize="11sp"
                />


        </LinearLayout>

    </LinearLayout>

